syntax = "proto3";
package DomainServices.RealEstateValuationService;
option csharp_namespace = "DomainServices.RealEstateValuationService.Contracts";

import "ModificationStamp.proto";
import "google/protobuf/wrappers.proto";

message DeedOfOwnershipDocument {
    int32 RealEstateValuationId = 1;
    int64 CremDeedOfOwnershipDocumentId = 2;
    int32 KatuzId = 3;
    google.protobuf.StringValue KatuzTitle = 4;
    google.protobuf.Int64Value DeedOfOwnershipId = 5;
    int32 DeedOfOwnershipNumber = 6;
    google.protobuf.StringValue Address = 7;
    repeated int64 RealEstateIds = 8;
    google.protobuf.Int64Value AddressPointId = 9;
    int32 DeedOfOwnershipDocumentId = 10;
    cis.types.ModificationStamp Created = 11;
    google.protobuf.StringValue FlatNumber = 12;
}
